# rinexpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: bench_native_extra.py  bench_numba.py  bench_obs3.py  last_run.txt  native_extra_last_run.txt
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  COOKBOOK.md  OPTIMIZATIONS.md  TUTORIAL.md  cookbook.md  index.md  installation.md  quickstart.md  tutorial.md
docs/corrections/: atmosphere.md  dcb.md  eop.md  ssr.md  tides.md  wind-up.md
docs/formats/: atmosphere-products.md  nav-subframes.md  receiver-binary.md  rinex-nav.md  rinex-obs.md  rtcm.md  sbas-and-has.md  sp3-clk.md
docs/internals/: architecture.md  benchmarks.md  optimizations.md
docs/positioning/: gnssr.md  imu.md  kalman.md  lambda.md  network.md  ppp.md  realtime.md  rtk.md  snapshot.md  spp.md  time-transfer.md
docs/project/: changelog.md  contributing.md
docs/quality/: qc.md  spoofing.md
docs/reference/: glossary.md  modules.md  top-level.md
docs/tooling/: async.md  cli.md  io.md  multi-file.md  plots.md  plugins.md  streaming.md
examples/: 01_basic_load_and_plot.py  02_batch_convert.py  03_streaming_huge_file.py  04_sp3_interpolation.py  05_skyplot_from_nav.py  06_spp_positioning.py  07_rtk_baseline.py  08_ntrip_to_rtcm.py  README.md
native/: CMakeLists.txt  README.md  pyproject.toml
native/python/rinexpy_native/: __init__.py
native/src/: bindings.cpp  bit_cursor.hpp  crc24q.cpp  crc24q.hpp  crinex_diff.cpp  crinex_diff.hpp  crinex_sv_decoder.cpp  crinex_sv_decoder.hpp  decode_obs_batch.cpp  decode_obs_batch.hpp  gpt2w_eval.cpp  gpt2w_eval.hpp  hatch_filter.cpp  hatch_filter.hpp  kalman_update.cpp  kalman_update.hpp  keplerian_ecef.cpp  keplerian_ecef.hpp  lagrange_sp3.cpp  lagrange_sp3.hpp  lambda_ils.cpp  lambda_ils.hpp  msm_decode.cpp  msm_decode.hpp  nav_subframes.cpp  nav_subframes.hpp  spp_solve.cpp  spp_solve.hpp  ssr_apply.cpp  ssr_apply.hpp  text_diff.cpp  text_diff.hpp
src/rinexpy/: __init__.py  __main__.py  _common.py  _errors.py  _io.py  _jit.py  _native.py  _time.py  _types.py  _version.py  antex.py  antex_calibrate.py  api.py  asyncio.py  beidou.py  binex.py  cli.py  clk.py  cors.py  crinex.py  dcb.py  dcb_download.py  eop.py  galileo_nav.py  geodesy.py  glonass.py  gnssr.py  gps_cnav.py  gps_cnav2.py  gps_lnav.py  gpstime.py  gpt2w.py  gw10.py  has.py  headers.py  imu.py  imu_tight.py  interp.py  ionex.py  kalman.py  (+44 more)
tests/: conftest.py  test_antex.py  test_antex_calibrate.py  test_antex_ionex_real.py  test_api.py  test_beidou.py  test_binex.py  test_cli.py  test_clk.py  test_common.py  test_corrections.py  test_cors.py  test_dcb.py  test_dcb_download.py  test_eci.py  test_enu.py  test_eop_real.py  test_ergonomics.py  test_galileo_nav.py  test_geodesy.py  test_glonass.py  test_gnssr.py  test_gps_cnav.py  test_gps_cnav2.py  test_gps_lnav.py  test_gpstime.py  test_gpt2w.py  test_gw10_real.py  test_has.py  test_has_mt4_7.py  test_hatch.py  test_headers.py  test_imu.py  test_imu_tight.py  test_interp.py  test_io.py  test_io_real.py  test_ionex.py  test_jit.py  test_kalman.py  (+83 more)
