[project]
name = "rinexpy"
version = "0.1.0"
description = "Modern, fast RINEX 2/3/4, CRINEX (Hatanaka), and SP3-a/c/d reader for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kshitij Duraphe", email = "kshitijduraphe5@gmail.com" }]
keywords = ["RINEX", "CRINEX", "SP3", "GNSS", "GPS", "Galileo", "GLONASS", "BeiDou", "NetCDF", "HDF5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "xarray>=2024.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
hatanaka = ["hatanaka>=2.7"]
lzw = ["ncompress>=1.0.1"]
netcdf = ["netCDF4>=1.6"]
geo = ["pymap3d>=3.1"]
plot = ["matplotlib>=3.8"]
all = ["hatanaka>=2.7", "ncompress>=1.0.1", "netCDF4>=1.6", "pymap3d>=3.1", "matplotlib>=3.8"]
jit = [
    "numba>=0.60",
]
zarr = [
    "zarr>=2.18",
]
native = [
    "rinexpy-native>=0.1",
]

[project.scripts]
rinexpy = "rinexpy.cli:main"

[project.urls]
Homepage = "https://github.com/ksd3/rinexpy"
Issues = "https://github.com/ksd3/rinexpy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rinexpy"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-benchmark>=4.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "hatanaka>=2.7",
    "ncompress>=1.0.1",
    "netCDF4>=1.6",
    "pymap3d>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "C4",
    "PTH",
    "PERF",
    "PIE",
    "PLE",
    "PLW",
]
ignore = [
    "E501",
    "PLW2901",
    "B028",
    "SIM108",
    "SIM105",  # try/except/pass is clearer than contextlib.suppress for short blocks
    "PERF401", # list comprehension not always more readable than tight for loop
    "PERF403", # dict comprehension not always more readable than tight for loop
    "RUF005",  # iterable unpacking not always clearer than concat for short lists
    "B905",    # zip(strict=...) is opt-in style; we already use it where it matters
]

[tool.ruff.lint.isort]
known-first-party = ["rinexpy"]

[tool.mypy]
python_version = "3.11"
files = ["src/rinexpy"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "parity: cross-check vs georinex",
    "needs_netcdf: requires netCDF4",
    "needs_hatanaka: requires hatanaka",
    "needs_lzw: requires ncompress",
]

[tool.uv.sources]
# In this repo the native package lives in ./native/ rather than on
# PyPI, so resolve it from the local path during development.
# Downstream installs from PyPI just see ``rinexpy-native`` as a
# normal compiled-wheel dependency.
rinexpy-native = { path = "native", editable = true }

[tool.coverage.run]
source = ["src/rinexpy"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
